name:                clash-io
version:             0.1.0.0
synopsis:            Run Clash circuits with a SDL frontend
description:         Run Clash circuits with a SDL frontend
homepage:            https://github.com/basile-henry/clash-io#readme
license:             MIT
license-file:        LICENSE
author:              Basile Henry
maintainer:          bjm.henry@gmail.com
copyright:           2017 Basile Henry
category:            Hardware
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Clash.IO
  build-depends:       base >= 4.7 && < 5
                     , clash-prelude
                     , deepseq
                     , sdl2
                     , stm
                     , text
  default-language:    Haskell2010

executable snake
  hs-source-dirs:      snake
  main-is:             Main.hs
  other-modules:       Snake
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clash-io
                     , clash-prelude
                     , ghc-typelits-extra
                     , ghc-typelits-knownnat
                     , ghc-typelits-natnormalise
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/clash-io
